{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 4324,
  "lineage": "3ccead4a-95ff-c8dd-5def-1d5bbea103b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "california-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:724772059772:targetgroup/california-target-group/6a86ec9c6b6a78e5",
            "arn_suffix": "targetgroup/california-target-group/6a86ec9c6b6a78e5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:724772059772:targetgroup/california-target-group/6a86ec9c6b6a78e5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-1:724772059772:loadbalancer/app/california-load-balancer/c8c03da788ba4fd2"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "california-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "tags_all": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0929b105fe0801dab"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "london-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:724772059772:targetgroup/london-target-group/07d4cc30e747803f",
            "arn_suffix": "targetgroup/london-target-group/07d4cc30e747803f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:724772059772:targetgroup/london-target-group/07d4cc30e747803f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:724772059772:loadbalancer/app/london-load-balancer/7f5ad6f58dcd5067"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "london-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "tags_all": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a1f614663b96baf4"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "new-york-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:724772059772:targetgroup/new-york-target-group/82e76a7cc49fbdde",
            "arn_suffix": "targetgroup/new-york-target-group/82e76a7cc49fbdde",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:724772059772:targetgroup/new-york-target-group/82e76a7cc49fbdde",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:724772059772:loadbalancer/app/new-york-load-balancer/fcba9aaf59e14221"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "new-york-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "tags_all": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07c9a3a2b17749618"
          },
          "dependencies": [
            "aws_vpc.new-york-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tokyo-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:724772059772:targetgroup/tokyo-target-group/914887770afc2946",
            "arn_suffix": "targetgroup/tokyo-target-group/914887770afc2946",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:724772059772:targetgroup/tokyo-target-group/914887770afc2946",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:724772059772:loadbalancer/app/tokyo-load-balancer/3dd1ac4328aa8758"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tokyo-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "tags_all": {
              "Name": "App1TargetGroup",
              "Owner": "User",
              "Project": "Web Service",
              "Service": "App1"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a02b985527efa1d1"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "index_key": "california-sg-lb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:724772059772:security-group/sg-0db2edf284af4487c",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db2edf284af4487c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "california-sg-lb",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "california-sg-lb"
            },
            "tags_all": {
              "Name": "california-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0929b105fe0801dab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.california-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "california-sg-server",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:724772059772:security-group/sg-0c349c69460bb9e88",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c349c69460bb9e88",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "california-sg-server",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "california-sg-server"
            },
            "tags_all": {
              "Name": "california-sg-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0929b105fe0801dab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.california-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "index_key": "london-sg-lb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:724772059772:security-group/sg-07412ce1f69dc4e7d",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07412ce1f69dc4e7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "london-sg-lb",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "london-sg-lb"
            },
            "tags_all": {
              "Name": "london-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1f614663b96baf4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.london-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "london-sg-server",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:724772059772:security-group/sg-00266d40660a68c63",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00266d40660a68c63",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "london-sg-server",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "london-sg-server"
            },
            "tags_all": {
              "Name": "london-sg-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1f614663b96baf4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.london-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "index_key": "new-york-sg-lb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772059772:security-group/sg-04dfc428d0be05b2e",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04dfc428d0be05b2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "new-york-sg-lb",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "new-york-sg-lb"
            },
            "tags_all": {
              "Name": "new-york-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c9a3a2b17749618"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-york-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "new-york-sg-server",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772059772:security-group/sg-05aa80f9eb4de40e7",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05aa80f9eb4de40e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "new-york-sg-server",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "new-york-sg-server"
            },
            "tags_all": {
              "Name": "new-york-sg-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c9a3a2b17749618"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-york-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "_7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": "tokyo-sg-lb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:724772059772:security-group/sg-08dc1c72d192fde06",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08dc1c72d192fde06",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-sg-lb",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-sg-lb"
            },
            "tags_all": {
              "Name": "tokyo-sg-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a02b985527efa1d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "tokyo-sg-server",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:724772059772:security-group/sg-0d711309ad34dbed9",
            "description": "Allow inbound traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d711309ad34dbed9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tokyo-sg-server",
            "name_prefix": "",
            "owner_id": "724772059772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-sg-server"
            },
            "tags_all": {
              "Name": "tokyo-sg-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a02b985527efa1d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "index_key": "california-b-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:724772059772:subnet/subnet-0ed1d6c9fab824aab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.46.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed1d6c9fab824aab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "california-b-public"
            },
            "tags_all": {
              "Name": "california-b-public"
            },
            "vpc_id": "vpc-0929b105fe0801dab"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        },
        {
          "index_key": "california-c-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:724772059772:subnet/subnet-087e3bde3f4e74b99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.46.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087e3bde3f4e74b99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "california-c-public"
            },
            "tags_all": {
              "Name": "california-c-public"
            },
            "vpc_id": "vpc-0929b105fe0801dab"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "index_key": "london-a-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:724772059772:subnet/subnet-0a968520b03f4aeb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.42.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a968520b03f4aeb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "london-a-public"
            },
            "tags_all": {
              "Name": "london-a-public"
            },
            "vpc_id": "vpc-0a1f614663b96baf4"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        },
        {
          "index_key": "london-b-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:724772059772:subnet/subnet-0b666a07442de7538",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.42.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b666a07442de7538",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "london-b-public"
            },
            "tags_all": {
              "Name": "london-b-public"
            },
            "vpc_id": "vpc-0a1f614663b96baf4"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "index_key": "new-york-a-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772059772:subnet/subnet-0cce8125815b7c433",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.41.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cce8125815b7c433",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "new-york-a-public"
            },
            "tags_all": {
              "Name": "new-york-a-public"
            },
            "vpc_id": "vpc-07c9a3a2b17749618"
          },
          "dependencies": [
            "aws_vpc.new-york-vpc"
          ]
        },
        {
          "index_key": "new-york-b-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772059772:subnet/subnet-0ad4c747ed7a2a7d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.41.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad4c747ed7a2a7d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "new-york-b-public"
            },
            "tags_all": {
              "Name": "new-york-b-public"
            },
            "vpc_id": "vpc-07c9a3a2b17749618"
          },
          "dependencies": [
            "aws_vpc.new-york-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "_7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": "tokyo-a-private",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:724772059772:subnet/subnet-0ef81e17dba079a22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.40.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef81e17dba079a22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-a-private"
            },
            "tags_all": {
              "Name": "tokyo-a-private"
            },
            "vpc_id": "vpc-0a02b985527efa1d1"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        },
        {
          "index_key": "tokyo-a-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:724772059772:subnet/subnet-02abddea0cbedcf89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.40.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02abddea0cbedcf89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-a-public"
            },
            "tags_all": {
              "Name": "tokyo-a-public"
            },
            "vpc_id": "vpc-0a02b985527efa1d1"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        },
        {
          "index_key": "tokyo-d-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:724772059772:subnet/subnet-0dfd17a0559c3aeae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.40.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfd17a0559c3aeae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-d-public"
            },
            "tags_all": {
              "Name": "tokyo-d-public"
            },
            "vpc_id": "vpc-0a02b985527efa1d1"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        },
        {
          "index_key": "tokyotest-c-public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:724772059772:subnet/subnet-047954dc9c7bc0e57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.40.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047954dc9c7bc0e57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724772059772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyotest-c-public"
            },
            "tags_all": {
              "Name": "tokyotest-c-public"
            },
            "vpc_id": "vpc-0a02b985527efa1d1"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "california-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:724772059772:vpc/vpc-0929b105fe0801dab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.46.0.0/16",
            "default_network_acl_id": "acl-0d80991ac8d42da7d",
            "default_route_table_id": "rtb-0af58f53f12189908",
            "default_security_group_id": "sg-068fdb55376362cba",
            "dhcp_options_id": "dopt-0f68a465683cf1104",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0929b105fe0801dab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af58f53f12189908",
            "owner_id": "724772059772",
            "tags": {
              "Name": "california"
            },
            "tags_all": {
              "Name": "california"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "london-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:724772059772:vpc/vpc-0a1f614663b96baf4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-0f7a12ac655087dab",
            "default_route_table_id": "rtb-009ccab8401dcb0f7",
            "default_security_group_id": "sg-056cdbc9504579c38",
            "dhcp_options_id": "dopt-09713dd77c1dce11c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a1f614663b96baf4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-009ccab8401dcb0f7",
            "owner_id": "724772059772",
            "tags": {
              "Name": "london"
            },
            "tags_all": {
              "Name": "london"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-york-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724772059772:vpc/vpc-07c9a3a2b17749618",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.41.0.0/16",
            "default_network_acl_id": "acl-0e594f60ef6d4de94",
            "default_route_table_id": "rtb-033b9cf0a76426627",
            "default_security_group_id": "sg-00580b0970be3d035",
            "dhcp_options_id": "dopt-02f654733ad0dba92",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c9a3a2b17749618",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-033b9cf0a76426627",
            "owner_id": "724772059772",
            "tags": {
              "Name": "new-york"
            },
            "tags_all": {
              "Name": "new-york"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tokyo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:724772059772:vpc/vpc-0a02b985527efa1d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.40.0.0/16",
            "default_network_acl_id": "acl-01eec4b10144531c1",
            "default_route_table_id": "rtb-0479dae6b5426936b",
            "default_security_group_id": "sg-04725568957c9c80d",
            "dhcp_options_id": "dopt-0736f1eb0a1b98a80",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a02b985527efa1d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0479dae6b5426936b",
            "owner_id": "724772059772",
            "tags": {
              "Name": "tokyo"
            },
            "tags_all": {
              "Name": "tokyo"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}